--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@
     </div>
     
     <div class="footer">
-        <p>BCa Bootstrap分析工具 © 2023 | 为医学科研提供统计支持</p>
+        <p>BCa Bootstrap分析工具 © YH </p>
     </div>
     
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
